# agent-handson

./: .env.example  .gitignore  CLAUDE.md  HANDSON_QUICKSTART.md  PROJECT_HISTORY.md  README.md  hello.py  pyproject.toml
.azure/: azure_settings.md
00_lecture/: 20251202_Azure_AI_Agent_ハンズオン.html
00_lecture/answer/: 01_multi-llm-reasoning_answer.html  02_azure-voice-chatbot_answer.html
00_lecture/guide/: 01_multi-llm-reasoning_guide.html  02_azure-voice-chatbot_guide.html
00_lecture/question/: 01_multi-llm-reasoning_quiz.html  02_azure-voice-chatbot_quiz.html
01_multi-llm-reasoning/: DESIGN.md  README.md  main.py  workflow.py
01_multi-llm-reasoning/agents/: __init__.py  analyzer.py  base.py  coordinator.py  researcher.py  summarizer.py
01_multi-llm-reasoning/config/: settings.py
01_multi-llm-reasoning/examples/: __init__.py  complex_reasoning.py  simple_query.py
01_multi-llm-reasoning/tests/: PRICING_SOURCES.todo.md  test_config.py  test_main_cli.py  test_tools_analysis.py  test_tools_formatting.py  test_tools_web.py  test_workflow.py
01_multi-llm-reasoning/tools/: __init__.py  analysis_tools.py  formatting_tools.py  web_tools.py
02_azure-voice-chatbot/: COST_ESTIMATES.md  DESIGN.md  README.md  __init__.py  main.py  voice_chat.py
02_azure-voice-chatbot/agents/: base.py  voice_agent.py
02_azure-voice-chatbot/config/: settings.py  voice_profiles.py
02_azure-voice-chatbot/examples/: advanced_chat.py  simple_chat.py  test_speech.py
02_azure-voice-chatbot/speech/: recognizer.py  synthesizer.py
02_azure-voice-chatbot/tests/: __init__.py  (+8 more)
(+5 files in other folders)
